--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,17 @@
 <resources>
-    <string name="app_name">Notes</string>
+    <string name="app_name">HITS alapú hálózati algoritmus a borkóstolók szakmai ismereteinek értékelésére</string>
     <string name="action_settings">Settings</string>
     <string name="activity_title_home">Notes</string>
-    <string name="msg_no_notes">No notes found!</string>
-    <string name="lbl_new_note_title">New Note</string>
-    <string name="lbl_edit_note_title">Edit Note</string>
-    <string name="hint_enter_note">Enter your note!</string>
+    <string name="lbl_new_note_title">New Person</string>
+    <string name="lbl_edit_note_title">Edit Person</string>
+    <string name="hint_enter_note">Enter your person\'s data!</string>
+    <string name="hint_birthday">Enter birthday</string>
+    <string name="hint_enter_firstName">Enter First Name!</string>
+    <string name="hint_enter_lastName">Enter Last Name!</string>
+    <string name="hint_enter_idCard">Enter ID card number!</string>
+    <string name="nev">Név</string>
+
+    <string name="ures_bor_lista">Nincsenek hozzáadott borok!</string>
+    <string name="msg_no_notes">No persons found!</string>
+    <string name="ures_kostolo_lista">Nincsenek kóstolók hozzáadva!</string>
 </resources>
