--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
         <item>2</item>
     </string-array>
 
-    <string-array name="zamazMinoseg">
+    <string-array name="zamatMinoseg">
         <item>22</item>
         <item>19</item>
         <item>16</item>
